<resources>
    <string name="app_name">YogaFitness</string>
    <string name="exercises">Exercises</string>
    <string name="setting">Setting</string>
    <string name="calendar">Calendar</string>
    <string name="view_exercise">VIEW EXERCISE</string>
    <string name="name_of_exercise">NAME OF EXERCISE</string>
    <string name="start">START</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="save">Save</string>
</resources>
