<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.devs.victorhernandez.yogafitness.SettingsPage">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:padding="@dimen/_16sdp"
        app:cardElevation="@dimen/_4sdp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdiGroup"
            android:orientation="horizontal"
            android:weightSum="3">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rdiEasy"
                android:layout_weight="1"
                android:theme="@style/MyRadioButton"
                android:text="@string/easy"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rdiMedium"
                android:layout_weight="1"
                android:theme="@style/MyRadioButton"
                android:text="@string/medium"/>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rdiHard"
                android:layout_weight="1"
                android:theme="@style/MyRadioButton"
                android:text="@string/hard"/>

        </RadioGroup>

    </android.support.v7.widget.CardView>
    <ToggleButton
        android:layout_below="@+id/cardview"
        android:id="@+id/switchAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textOn="@string/on"
        android:textOff="@string/off"/>
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TimePicker>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:textColor="@color/blanco"
        android:layout_margin="@dimen/_8sdp"
        android:background="@color/colorPrimary"
        />
</RelativeLayout>
