<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imglogo"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_70sdp"
        android:src="@drawable/logo"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTraining"
        android:layout_centerInParent="true"
        android:src="@drawable/play"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnExercises"
                android:text="@string/exercises"
                android:textColor="@color/blanco"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@color/colorPrimary"

                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSetting"
                android:text="@string/setting"
                android:textColor="@color/blanco"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorPrimary" />

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCalendar"
            android:text="@string/calendar"
            android:textColor="@color/blanco"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/colorPrimary"
            />

    </LinearLayout>


</RelativeLayout>
